<?xml version="1.0"?>
<package>
  <name>win_ros</name>
  <version>0.5.0</version>
  <description>
    Supporting tools and demos for developing with ROS on windows.
  </description>
  <maintainer email="stuart@theschaefers.com">Stuart Schaefer</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/win_ros</url>
  <url type="repository">https://github.com/ros-windows/win_ros</url>
  <url type="bugtracker">https://github.com/ros-windows/win_ros/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="yichoe@yujinrobot.com">Yeong-Il Choe</author>
  <author email="stuart@theschaefers.com">Stuart Schaefer</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>

