##############################################################################
# CMake
##############################################################################

cmake_minimum_required(VERSION 2.8.0)
project(winros_create_msg_pkg)

##############################################################################
# Catkin
##############################################################################

find_package(catkin REQUIRED)
catkin_package()

catkin_python_setup()
