<?xml version="1.0"?>
<package>
  <name>%(package)s</name>
  <version>0.1.0</version>
  <description>

     %(description)s

  </description>
  <maintainer email="%(author)s@gmail.com">%(author)s</maintainer>
  <author>%(author)s</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
%(build_depends)s
  <run_depend>message_runtime</run_depend>
%(run_depends)s
</package>
